Fix link wrapping

--- a/frontend/src/pages/site/TagList/TagList.scss
+++ b/frontend/src/pages/site/TagList/TagList.scss
@@ -15,6 +15,7 @@
 
   &Content {
     display: flex;
+    flex-wrap: wrap;
     gap: var(--spacing);
   }
 
